--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicons/favicon-16x16.png" />
   <link rel="manifest" href="<%= BASE_URL %>favicons/site.webmanifest" />
-  <title>God's Gift | Its more blessed to give than receive</title>
+  <title>Man App | We are determined to make you a Gentleman</title>
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:300,400,400i,600,700,800,900"
     rel="stylesheet"
